<resources>
    <string name="app_name">Square SizePic Editor</string>
    <string name="pio" translatable="false">square.edd.dddee.fileprovider</string>
    <string name="gallery">Gallery</string>
    <string name="collage">Collage</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="galleryalbum">Gallery Album</string>
    <string name="please_select_photos">Please select photos</string>
    <string name="crop">Crop</string>
    <string name="free">Free</string>
    <string name="circle">Circle</string>
    <string name="cutfailed">cut failed</string>
    <string name="color">Color</string>
    <string name="adjust">Adjust</string>
    <string name="filter">Filter</string>
    <string name="pattern">Pattern</string>
    <string name="emoji">Emoji</string>
    <string name="blur">Blur</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="saturation">Saturation</string>
    <string name="exposure">Exposure</string>
    <string name="warmth">Warmth</string>
    <string name="grid">Grid</string>
    <string name="border">Border</string>
    <string name="save">Save</string>
    <string name="savasucc">Save Successful</string>
    <string name="savefail">Save Failed</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>

</resources>
