<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FF5887"
   >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="120dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_exit_bg"
       >

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="87dp"
            android:layout_height="33dp"
            android:layout_below="@+id/tv_msg"
            android:layout_alignLeft="@+id/tv_msg"
            android:layout_marginTop="46dp"
            android:background="@drawable/cancel"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="87dp"
            android:layout_height="33dp"
            android:layout_below="@+id/tv_msg"
            android:layout_alignEnd="@+id/tv_msg"
            android:layout_marginTop="46dp"
            android:background="@drawable/exit"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/inner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" />
</RelativeLayout>